Updating about page template

--- a/src/modules/Team Member.module/module.html
+++ b/src/modules/Team Member.module/module.html
@@ -2,5 +2,5 @@
   <img class="team-member__image" src="{{ module.team_member_image.src }}" alt="{{ module.team_member_image.alt }}">
   <h3 class="team-member__name">{{ module.team_member_name }}</h3>
   <p class="team-member__position">{{ module.team_member_position }}</p>
-  <p class="team-member__bio">{{ module.team_member_bio }}</p>
+  <div class="team-member__bio">{{ module.team_member_bio }}</div>
 </section>
