Minor cleanup of pillar page code

--- a/src/modules/Pillar Menu.module/module.html
+++ b/src/modules/Pillar Menu.module/module.html
@@ -2,7 +2,7 @@
   <h2 class="pillar-navigation__title">
     {{ module.pillar_menu_title }}
   </h2>
-  <nav class="pillar-navigation__menu">
+  <nav class="pillar-navigation__menu" aria-label="Secondary menu">
     <ul id="pillar-navigation__menu-items" class="pillar-navigation__menu-items"></ul>
   </nav>
 </section>
