Updating design of pillar page

--- a/src/modules/Pillar Section Title.module/module.html
+++ b/src/modules/Pillar Section Title.module/module.html
@@ -12,7 +12,7 @@
       var navChild = document.createElement("li");
       navChild.className = "pillar-navigation__menu-item";
       navChild.innerHTML = '<a href="#{{ section_anchor }}">{{ module.pillar_section_title|escape }}</a>';
-      navMenu.appendChild(navChild);
+      pillarMenu.appendChild(navChild);
     }
   })();
 
