--- a/src/modules/Testimonial.module/module.html
+++ b/src/modules/Testimonial.module/module.html
@@ -1,12 +1,10 @@
 <section class="testimonial" id="testimonial_{{ name }}">
-  <h3 class="testimonial__title">{{ module.testimonial_title }}</h3>
   <div class="testimonial__description">
     {{ module.testimonial_description }}
   </div>
 
-  <img class="testimonial__avatar" src="{{ module.testimonial_image.src }}" alt="{{ module.testimonial_image.alt }}">
-  <div class="testimonial__name">
-    {{ module.testimonial_name }}
+  <div class="testimonial__profile">
+    <img class="testimonial__avatar" src="{{ module.testimonial_image.src }}" alt="{{ module.testimonial_image.alt }}">
   </div>
 </section>
 
