--- a/src/modules/Button.module/module.html
+++ b/src/modules/Button.module/module.html
@@ -9,32 +9,43 @@
 {% endif %}
 
 {% set rel = (module.button_link.open_in_new_tab ? "noopener " : null) ~ (module.button_link.no_follow ? "nofollow" : null) %}
-<a class="button button__primary" href="{{ href }}"
+
+<{% if module.button_options.button_link_toggle == true %}a href="{{ href }}" {% else %}button {% endif %} class="button{% if module.style.button_type == 'secondary' %} button--secondary{% endif%} {% if module.button_icon.icon_position == 'right' %} button--icon-right{% endif %}"
     id="button_{{ name }}"
     {% if module.button_link.open_in_new_tab %}target="_blank"{% endif %}
     rel="{{ rel }}">
+
+    {% if module.button_options.button_icon_toggle == true and module.button_icon.icon.unicode %}
+      {% icon
+        name="{{ module.button_icon.icon.name }}"
+        style="{{ module.button_icon.icon.type }}"
+        unicode="{{ module.button_icon.icon.unicode }}"
+        extra_classes="button__icon"
+      %}
+    {% endif %}
   {{ module.button_text }}
-</a>
+
+</{% if module.button_options.button_link_toggle == true %}a{% else %}button{% endif %}>
 
 {% if module.style.override_default_style %}
-{% require_css %}
-<style>
-  #button_{{ name }} {
-    background-color: rgba({{ module.style.button_bg_color.color|convert_rgb }}, {{ module.style.button_bg_color.opacity * 0.01 }});
-    border-color: rgba({{ module.style.button_border_color.color|convert_rgb }}, {{ module.style.button_border_color.opacity * 0.01 }});
-    border-radius: {{ module.style.button_corner_radius }}px;
-    border-width: {{ module.style.button_border_width }}px;
-    color: rgba({{ module.style.button_text_color.color|convert_rgb }},{{ module.style.button_text_color.opacity * 0.01 }});
-    padding-left: {{ module.style.button_horizontal_padding }}px;
-    padding-right: {{ module.style.button_horizontal_padding }}px;
-    padding-top: {{ module.style.button_vertical_padding }}px;
-    padding-bottom: {{ module.style.button_vertical_padding }}px;
-  }
-  #button_{{ name }}:hover {
-    border-color: rgba({{ module.style.button_border_hover_color .color|convert_rgb }}, {{ module.style.button_border_hover_color.opacity * 0.01 }});
-    background-color: rgba({{ module.style.button_bg_hover_color.color|convert_rgb }}, {{ module.style.button_bg_hover_color.opacity * 0.01 }});
-    color: rgba({{ module.style.button_text_hover_color.color|convert_rgb }}, {{ module.style.button_text_hover_color.opacity * 0.01 }});"
-  }
-</style>
-{% end_require_css %}
+  {% require_css %}
+    <style>
+      #button_{{ name }} {
+        background-color: rgba({{ module.style.button_bg_color.color|convert_rgb }}, {{ module.style.button_bg_color.opacity * 0.01 }});
+        border-color: rgba({{ module.style.button_border_color.color|convert_rgb }}, {{ module.style.button_border_color.opacity * 0.01 }});
+        border-radius: {{ module.style.button_corner_radius }}px;
+        border-width: {{ module.style.button_border_width }}px;
+        color: rgba({{ module.style.button_text_color.color|convert_rgb }},{{ module.style.button_text_color.opacity * 0.01 }});
+        padding-left: {{ module.style.button_horizontal_padding }}px;
+        padding-right: {{ module.style.button_horizontal_padding }}px;
+        padding-top: {{ module.style.button_vertical_padding }}px;
+        padding-bottom: {{ module.style.button_vertical_padding }}px;
+      }
+      #button_{{ name }}:hover {
+        border-color: rgba({{ module.style.button_border_hover_color .color|convert_rgb }}, {{ module.style.button_border_hover_color.opacity * 0.01 }});
+        background-color: rgba({{ module.style.button_bg_hover_color.color|convert_rgb }}, {{ module.style.button_bg_hover_color.opacity * 0.01 }});
+        color: rgba({{ module.style.button_text_hover_color.color|convert_rgb }}, {{ module.style.button_text_hover_color.opacity * 0.01 }});"
+      }
+    </style>
+  {% end_require_css %}
 {% endif %}
