Updated icon module and template references

--- a/src/modules/Icon.module/module.html
+++ b/src/modules/Icon.module/module.html
@@ -1,22 +1,21 @@
-<div class="icon" id="icon_{{ name }}">
-  <span class="icon__wrapper">
-    {% icon
-      name="{{ module.icon_type.name }}"
-      style="{{ module.icon_type.type }}"
-      unicode="{{ module.icon_type.unicode }}"
-    %}
-  </span>
-</div>
+{% icon
+  extra_classes="icon"
+  name="{{ module.icon.name }}"
+  purpose="{{ module.accessibility.purpose }}"
+  style="{{ module.icon.type }}"
+  title="{{ module.accessibility.title }}"
+  unicode="{{ module.icon.unicode }}"
+%}
 
 {% if module.style.override_default_style %}
 {% require_css %}
 <style>
-  #icon_{{ name }} .icon__wrapper {
-      background-color: rgba({{ module.style.icon_bg_color.color|convert_rgb }},{{ module.style.icon_bg_color.opacity * 0.01 }});
-      border-color: rgba({{ module.style.icon_border_color.color|convert_rgb }},{{ module.style.icon_border_color.opacity * 0.01 }});
+  #hs_cos_wrapper_{{name}} .icon {
+    background-color: rgba({{ module.style.bg_color.color|convert_rgb }},{{ module.style.bg_color.opacity / 100 }});
+    border-color: rgba({{ module.style.border_color.color|convert_rgb }},{{ module.style.border_color.opacity / 100 }});
   }
-  #icon_{{ name }} svg {
-      fill: rgba({{ module.style.icon_color.color|convert_rgb }},{{ module.style.icon_color.opacity * 0.01 }});
+  #hs_cos_wrapper_{{name}} svg {
+    fill: rgba({{ module.style.color.color|convert_rgb }},{{ module.style.color.opacity / 100 }});
   }
 </style>
 {% end_require_css %}
