Minor fixes to icon module

--- a/src/modules/Icon.module/module.html
+++ b/src/modules/Icon.module/module.html
@@ -7,7 +7,7 @@
   unicode="{{ module.icon.unicode }}"
 %}
 
-{% if module.style.override_default_style %}
+{% if module.override_default_style %}
 {% require_css %}
 <style>
   #hs_cos_wrapper_{{name}} .icon {
