Switching to single quotes in HubL

--- a/src/modules/Icon.module/module.html
+++ b/src/modules/Icon.module/module.html
@@ -1,10 +1,10 @@
 {% icon
-  extra_classes="icon"
-  name="{{ module.icon.name }}"
-  purpose="{{ module.accessibility.purpose }}"
-  style="{{ module.icon.type }}"
-  title="{{ module.accessibility.title }}"
-  unicode="{{ module.icon.unicode }}"
+  extra_classes='icon'
+  name='{{ module.icon.name }}'
+  purpose='{{ module.accessibility.purpose }}'
+  style='{{ module.icon.type }}'
+  title='{{ module.accessibility.title }}'
+  unicode='{{ module.icon.unicode }}'
 %}
 
 {% if module.override_default_style %}
