--- a/src/modules/blog-tag-filter.module/module.html
+++ b/src/modules/blog-tag-filter.module/module.html
@@ -1,14 +1,14 @@
 {% set my_tags = blog_tags('default', 250) %}
 {% set currentURL = content.absolute_url %}
 
-<div class="blog-tag-filter">
-  <span class="blog-tag-filter__title">Browse by</span>
-  <div class="blog-tag-filter__dropdown">
-    <select>
+<form class="blog-tag-filter">
+  <label for="tag-select" class="blog-tag-filter__title">Browse by</label>
+  <div class="blog-tag-filter__select-wrapper">
+    <select name="tag-select" id="tag-select" class="blog-tag-filter__select">
       <option {% if currentURL == group.absolute_url %}selected="selected"{% endif %} value="{{ group.absolute_url }}">All</option>
-    {% for item in my_tags %}
-      <option {% if currentURL == blog_tag_url(group.id, item.slug) %}selected="selected"{% endif %} value="{{ blog_tag_url(group.id, item.slug) }}">{{ item }}</option>
-    {% endfor %}
+      {% for item in my_tags %}
+        <option {% if currentURL == blog_tag_url(group.id, item.slug) %}selected="selected"{% endif %} value="{{ blog_tag_url(group.id, item.slug) }}">{{ item }}</option>
+      {% endfor %}
     </select>
   </div>
-</div>
+</form>
