--- a/src/modules/blog-listing-banner.module/module.html
+++ b/src/modules/blog-listing-banner.module/module.html
@@ -1,12 +1,12 @@
-<section class="blog-index-header" id="blog-index-header_{{ name }}" style="background-image: url('{{ module.blog_listing_banner_image.src }}');">
+<section class="blog-index-header" style="background-image: url('{{ module.banner_image.src }}');">
   <div class="blog-index-header__inner">
     {% if module.blog_listing_banner_title %}
-      <h1 class="blog-index-header__title">{{ module.blog_listing_banner_title }}</h1>
+      <h1 class="blog-index-header__title">{{ module.title }}</h1>
     {% else %}
       <h1 class="blog-index-header__title">{{ group.public_title }}</h1>
     {% endif %}
     {% if module.blog_listing_banner_subtitle %}
-      <p class="blog-index-header__subtitle">{{ module.blog_listing_banner_subtitle }}</p>
+      <p class="blog-index-header__subtitle">{{ module.subtitle }}</p>
     {% else %}
       <p class="blog-index-header__subtitle">{{ group.description }}</p>
     {% endif %}
@@ -16,11 +16,11 @@
 {% if module.style.override_default_style %}
 {% require_css %}
 <style>
-  #blog-index-header_{{ name }} .blog-index-header__title {
-    color: rgba({{ module.style.blog_listing_banner_title_color.color|convert_rgb }},{{ module.style.blog_listing_banner_title_color.opacity * 0.01 }});
+  #hs_cos_wrapper_{{ name }} .blog-index-header__title {
+    color: rgba({{ module.style.title_color.color|convert_rgb }},{{ module.style.title_color.opacity / 100 }});
   }
-  #blog-index-header_{{ name }} .blog-index-header__subtitle {
-    color: rgba({{ module.style.blog_listing_banner_subtitle_color.color|convert_rgb }},{{ module.style.blog_listing_banner_subtitle_color.opacity * 0.01 }});"
+  #hs_cos_wrapper_{{ name }} .blog-index-header__subtitle {
+    color: rgba({{ module.style.subtitle_color.color|convert_rgb }},{{ module.style.subtitle_color.opacity / 100 }});"
   }
 </style>
 {% end_require_css %}
