--- a/src/modules/Accordion.module/module.html
+++ b/src/modules/Accordion.module/module.html
@@ -1,4 +1,4 @@
-<div class="accordion" id="accordion_{{ name }}" {% if module.max_1_open %}data-sync="true"{% endif %}>
+<div class="accordion" {% if module.max_1_open %}data-sync="true"{% endif %}>
   {% for accordion in module.accordion %}
     <div class="accordion__item" aria-expanded="{% if accordion.open_by_default %}true{% endif %}">
       <button>
