update lp footers

--- a/src/modules/background-image.module/module.html
+++ b/src/modules/background-image.module/module.html
@@ -1,5 +1,5 @@
 <style>
-  .body-container {
+  .body-container-wrapper {
     background-image: linear-gradient({{ module.top_color.color }}, {{ module.intensity }}%, rgba(0,0,0,0.4)), url({{ module.image }});
     background-size: cover;
   }
